WIP: updating release

--- a/app.cfg
+++ b/app.cfg
@@ -3,7 +3,7 @@
 #######################################
 
 # enable debug mode.  Disable this in production!
-DEBUG = True
+DEBUG = False
 
 # Secret key for app encryption.
 # Simple way to generate a random secret key:
