finished Dockerfile and updated README accordingly

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -1,6 +1,5 @@
-user www-data;
 worker_processes auto;
-pid /run/nginx.pid;
+pid /var/cache/nginx/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -11,6 +10,12 @@ events {
 http {
     access_log /dev/stdout;
     error_log /dev/stdout;
+
+    proxy_temp_path /var/cache/nginx/proxy_temp;
+    client_body_temp_path /var/cache/nginx/client_temp;
+    fastcgi_temp_path /var/cache/nginx/fastcgi_temp;
+    uwsgi_temp_path /var/cache/nginx/uwsgi_temp;
+    scgi_temp_path /var/cache/nginx/scgi_temp;
 
     sendfile            on;
     tcp_nopush          on;
@@ -24,8 +29,8 @@ http {
     index   index.html index.htm;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
+        listen       8080 default_server;
+        listen       [::]:8080 default_server;
         server_name  localhost;
         root         /var/www/html;
         
