--- a/configs/uwsgi.ini
+++ b/configs/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-module = app:app
-uid = www-data
-gid = www-data
+module = src.app:app
+uid = 1000
+gid = 1000
 master = true
 processes = 5
 
@@ -10,3 +10,4 @@ chmod-sock = 664
 vacuum = true
 
 die-on-term = true
+
