--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -17,8 +17,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            digiblink/bullseye-nginx-php5-fpm
-            ghcr.io/digiblink/bullseye-nginx-php5-fpm
+            ghcr.io/zxpower/reflaskr
           tags: |
             type=sha
             type=ref,event=tag
@@ -30,8 +29,8 @@ jobs:
           labels: |
             org.opencontainers.image.vendor=digiBlink
             org.opencontainers.image.source=https://github.com/${{ env.REPO_NAME }}
-            org.opencontainers.image.title=Debian based image with latest PHP5 FPM and Nginx
-            org.opencontainers.image.description=Debian based image with latest PHP5 FPM and Nginx
+            org.opencontainers.image.title=Debian based image with Python 3.11 and Flask app
+            org.opencontainers.image.description=Debian based image with Python 3.11 and Flask app
             org.opencontainers.image.created=${{ steps.time.outputs.time }}
             org.opencontainers.image.revision=${{ steps.short-sha.outputs.sha }}
 
@@ -40,13 +39,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
-      - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DH_USER }}
-          password: ${{ secrets.DH_PAT }}
 
       - name: Login to GHCR
         uses: docker/login-action@v3
